# code-llm-eval

./: .gitignore  README.md  benchmark.py  benchmark_configs.py  cmds  conda.yaml  dataset_configs.py  evaluate.py  pyproject.toml  utils.py
bigcode-evaluation-harness/: Dockerfile-multiple  benchmark.py  dashboard.py  dataset_configs.py  eval_utils.py  main.py  makefile  utils.py
bigcode-evaluation-harness/bigcode_eval/: configure_ks.py
bigcode-evaluation-harness/bigcode_eval/tasks/: humaneval.py  mbpp.py  multiple.py
bigcode-evaluation-harness/bigcode_eval/tasks/custom_metrics/multiple_metrics/: single_experiment_pass_k.py
tests/: test_benchmark.py  test_inputs.py
