[project]
requires-python = ">=3.9"

[tool.ruff]
exclude = [
    "*env",
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]
line-length = 120
indent-width = 4
target-version = "py310"
cache-dir = "~/.cache/ruff"
fix = true
include = ["bigcode-evaluation-harness", "tests"]
src = ["bigcode-evaluation-harness"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = ["dev", "*env", "**/node_modules", "**/__pycache__"]
venvPath = "."
venv = "denv"
pythonVersion = "3.10.12"
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
extraPaths = ["src"]
reportMissingTypeStubs = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["bigcode-evaluation-harness"]
log_cli = "True"
log_level = "INFO"
log_file = "pytest-logs/logs.txt"
log_format = "%(asctime)s %(levelname)s %(name)s -- %(message)s\nData:\t%(args)s\n"